# clown

./: Cargo.toml  README.md  Readme.md  dist-workspace.toml  flake.nix
.github/workflows/: build.yml  release.yml  rust.yml
clown/: Cargo.toml  build.rs
clown-client/: Cargo.toml
clown-client/src/: command.rs  component.rs  config.rs  event_handler.rs  focus_manager.rs  input_widget.rs  logger.rs  main.rs  main_view.rs  message.rs  message_event.rs  model.rs  text_widget.rs  widget_view.rs
clown-client/src/irc_view/: color_user.rs  input_widget.rs  main_view.rs  mod.rs  text_widget.rs  topic_widget.rs  users_widget.rs
clown-client/wix/: main.wxs
clown-core/: Cargo.toml
clown-core/src/: client.rs  command.rs  conn.rs  error.rs  lib.rs  message.rs  outgoing.rs  reply.rs  response.rs
clown-parser/: Cargo.toml
clown-parser/benches/: parse_messages.rs
clown-parser/src/: irc.pest  lib.rs  message.rs  parser.rs  parser_pest.rs  source.rs
clown-spell/: Cargo.toml
clown-spell/src/: lib.rs  trie.rs
clown-spell/src/dict/: affix.rs  error.rs  mod.rs
clown-website-preview/: Cargo.toml
clown-website-preview/src/: lib.rs
clown-yaml/: Cargo.toml
clown-yaml-derive/: Cargo.toml
clown-yaml-derive/src/: lib.rs
clown-yaml/src/: lib.rs
clown/benches/: message_content.rs  message_parser.rs  textwrapper.rs
clown/src/: async_task.rs  command.rs  component.rs  config.rs  context.rs  event_handler.rs  focus_manager.rs  lib.rs  logger.rs  main.rs  message_event.rs  message_queue.rs  model.rs  project_path.rs  tui.rs  widget_view.rs
clown/src/irc_view/: color_user.rs  command.rs  dimension_discuss.rs  discuss_widget.rs  history.rs  input_widget.rs  irc_model.rs  irc_session.rs  main_view.rs  message_content.rs  message_parser.rs  mod.rs  search_widget.rs  session.rs  spell_checker.rs  text_widget.rs  tooltip_widget.rs  topic_widget.rs  users_widget.rs  website_preview.rs
clown/src/irc_view/discuss/: dimension_discuss.rs  discuss_widget.rs  mod.rs  servers_messages.rs
clown/src/irc_view/input/: command.rs  completion.rs  history.rs  input_widget.rs  mod.rs  spell_checker.rs  text_input.rs  trie.rs
clown/src/irc_view/textwrapper/: mod.rs
clown/src/message_irc/: log_merger.rs  log_parser.rs  message_content.rs  message_logger.rs  message_parser.rs  mod.rs
clown/src/message_irc/log/: log_merger.rs  log_parser.rs  message_logger.rs  mod.rs
clown/src/message_irc/textwrapper/: mod.rs
clown/src/state/: config.rs  context.rs  irc_model.rs  mod.rs  model.rs  server_id.rs  session.rs
clown/wix/: main.wxs
tests/irctest/clown-compat/: Cargo.toml
tests/irctest/clown-compat/src/: main.rs
