[workspace]
resolver = "2"
package.repository = "https://github.com/F4r3n/clown"
package.authors = ["Guillaume Kotulski"]
package.description = "A TUI based IRC client"

members = ["clown", "clown-core", "clown-website-preview", "clown-parser"]

[workspace.lints.rust]
trivial_numeric_casts = "warn"
improper_ctypes = "warn"
improper_ctypes_definitions = "warn"
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"

[workspace.lints.clippy]
indexing_slicing = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
panic_in_result_fn = "warn"
dbg_macro = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unimplemented = "warn"
cast_lossless = "warn"
trailing_empty_array = "warn"
as_ptr_cast_mut = "warn"
lint_groups_priority = "allow"
new_without_default = "allow"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
debug = false

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'

[profile.release]
debug = true

[profile.bench]
debug = true
