[package]
name = "clown-client"
version = "0.1.0"
edition = "2024"

[dependencies]
clown-core = { version = "0.1.0", path = "../clown-core", features = ["serde"] }
color-eyre = { version = "0.6.5", default-features = false }
ratatui = { version = "0.29.0", default-features = false, features = [
    "crossterm",
] }
tui-input = { version = "0.14.0", default-features = false, features = [
    "crossterm",
] }
tokio = { version = "1.46.1", default-features = false, features = ["full"] }
tokio-util = { version = "0.7.9", default-features = false }
futures = { version = "0.3.28", default-features = false, features = [
    "async-await",
] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
chrono = { version = "0.4.41", default-features = false, features = [
    "clock",
    "std",
] }
once_cell = { version = "1.21.3", default-features = false }
directories = "6.0.0"
textwrap = "0.16.2"
toml = "0.9.3"
serde = { version = "1.0.219", features = ["serde_derive"] }
