[package]
name = "clown-core"
version = "0.1.0"
edition = "2024"

[dependencies]
clown-parser = { version = "0.1.0", path = "../clown-parser" }
futures-core = { version = "0.3.31", default-features = false }
phf = { version = "0.12.1", default-features = false, features = ["macros"] }
rustls = { version = "0.23.28", default-features = false, features = [
    "std",
    "ring",
] }
serde = { version = "1.0.219", optional = true, features = ["serde_derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", default-features = false, features = [
    "net",
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync",
] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "ring",
] }
webpki-roots = { version = "1.0.1", default-features = false }

[lints]
workspace = true

[dev-dependencies]
anyhow = "1.0.98"

[features]
serde = ["dep:serde"]
