[package]
name = "clown-core"
version = "0.1.0"
edition = "2024"

[dependencies]
clown-parser = { version = "0.1.0", path = "../clown-parser" }
futures-core = { version = "0.3.31", default-features = false }
phf = { version = "0.13.1", default-features = false, features = ["macros"] }
rustls = { version = "0.23.35", default-features = false, features = [
    "std",
    "ring",
] }
serde = { version = "1.0.228", optional = true, features = ["serde_derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", default-features = false, features = [
    "net",
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync",
] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "ring",
] }
webpki-roots = { version = "1.0.4", default-features = false }

[lints]
workspace = true

[dev-dependencies]
anyhow = "1.0.100"

[features]
serde = ["dep:serde"]
