[package]
name = "clown-core"
version = "0.1.0"
edition = "2024"

[dependencies]
clown-parser = { version = "0.1.0", path = "../clown-parser" }
futures-core = { version = "0.3.32", default-features = false }
phf = { version = "0.14.0", default-features = false, features = ["macros"] }
rustls = { version = "0.23.40", default-features = false, features = [
    "std",
    "ring",
] }
serde = { version = "1.0.228", optional = true, features = ["serde_derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false, features = [
    "net",
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync",
] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "ring",
] }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
tokio-stream = { version = "0.1", default-features = false }
webpki-roots = { version = "1.0.8", default-features = false }

[lints]
workspace = true

[dev-dependencies]
anyhow = "1.0.102"

[features]
serde = ["dep:serde"]
