[package]
name = "clown-spell"
version = "0.1.0"
edition = "2024"
repository.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
fst = "0.4.7"
regex = {version="1.12.2",features=["std", "perf"], default-features=false}
thiserror = "2.0.17"

[lints]
workspace = true
