[package]
name = "clown"
version = "0.1.3"
edition = "2024"
repository = "https://github.com/F4r3n/clown"
authors = ["Guillaume Kotulski"]

[package.metadata.wix]
upgrade-guid = "CF50FA6D-6613-4928-941C-F3ACD6A009C5"
path-guid = "190F04D6-FD7C-4E51-A70C-F7C36CE4AF46"
license = false
eula = false

[dependencies]
clown-core = { version = "0.1.0", path = "../clown-core", features = ["serde"] }
color-eyre = { version = "0.6.5", default-features = false }
ratatui = { version = "0.29", default-features = false, features = [
    "crossterm",
] }

tokio = { version = "1.48.0", default-features = false, features = ["full"] }
tokio-util = { version = "0.7.17", default-features = false }
futures = { version = "0.3.31", default-features = false, features = [
    "async-await",
] }
crossterm = { version = "0.29.0", features = ["event-stream", "bracketed-paste"] }
chrono = { version = "0.4.42", default-features = false, features = [
    "clock",
    "std",
] }
once_cell = { version = "1.21.3", default-features = false }
directories = "6.0.0"
textwrap = "0.16.2"
toml = "0.9.8"
serde = { version = "1.0", features = ["serde_derive"] }
strum = { version = "0.27", features = ["derive", "strum_macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
unicode-width = "0.2.0"
clown-website-preview = {version= "0.1.0", path="../clown-website-preview", optional = true}
ratatui-image = {version = "8.0.2", features= ["crossterm"], default-features = false, optional = true}
ahash = "0.8.12"
open = "5.3.2"
palette = {version="0.7.6", features=["std"], default-features=false}

[dev-dependencies]
anyhow = "1.0.100"
criterion = { version = "0.7.0", features = ["plotters"] }

[features]
default = ["website-preview"]
bench = []
website-preview = ["dep:ratatui-image", "dep:clown-website-preview"]

[[bench]]
name = "message_parser"
harness = false

[lints]
workspace = true
