[package]
name = "clown"
version = "0.4.0"
edition = "2024"
repository = "https://github.com/F4r3n/clown"
authors = ["Guillaume Kotulski"]

[package.metadata.wix]
upgrade-guid = "CF50FA6D-6613-4928-941C-F3ACD6A009C5"
path-guid = "190F04D6-FD7C-4E51-A70C-F7C36CE4AF46"
license = false
eula = false

[dependencies]
clown-core = { version = "0.1.0", path = "../clown-core", features = ["serde"] }
ratatui = { version = "0.30", default-features = false, features = [
    "crossterm",
    "layout-cache"
] }

tokio = { version = "1.52.3", default-features = false, features = ["full"] }
tokio-util = { version = "0.7.18", default-features = false }
futures = { version = "0.3.32", default-features = false, features = [
    "async-await",
] }
crossterm = { version = "0.29.0", features = ["event-stream", "bracketed-paste"] }
chrono = { version = "0.4.45", default-features = false, features = [
    "clock",
    "std",
] }
directories = "6.0.0"
toml = "1.1.2"
serde = { version = "1.0", features = ["serde_derive"] }
strum = { version = "0.28", features = ["derive", "strum_macros"] }
tracing = {version= "0.1.44", features = ["std"], default-features = false}
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
unicode-width = "0.2.2"
clown-website-preview = {version= "0.1.0", path="../clown-website-preview", optional = true}
clown-spell = {version= "0.1.0", path="../clown-spell", optional = true}

ratatui-image = {version = "11.0.4", features= ["crossterm"], default-features = false}
ahash = { version = "0.8.12", features = ["serde"] }
open = "5.3.5"
palette = {version="0.7.6", features=["std"], default-features=false}
tracing-appender = {version = "0.2.5", default-features=false}
shadow-rs = {version="2.0.0", default-features=false}
clap = { version = "4.6.1", features = ["derive", "help", "std"], default-features = false }
bit-vec = "0.9.1"
thiserror = "2.0.18"
anyhow = "1.0.102"
nom = { version = "8.0.0", features = ["std"], default-features = false }
ureq = {version = "3.3.0", optional = true}

[dev-dependencies]
anyhow = "1.0.102"
criterion = { version = "0.8.2", features = ["plotters"] }
tempfile = "3.27.0"

[build-dependencies]
shadow-rs = "2.0.0"

[features]
default = ["website-preview"]
bench = []
website-preview = ["dep:clown-website-preview", "dep:ureq"]
spell-checker = ["dep:clown-spell", "dep:ureq"]

[[bench]]
name = "message_parser"
harness = false

[[bench]]
name = "textwrapper"
harness = false

[[bench]]
name = "message_content"
harness = false

[lints]
workspace = true
